# recover-lead

./: .coderabbit.yaml  .env.example  .gitignore  CLAUDE.md  Makefile  TASKS.md  docker-compose.test.yml  docker-compose.yml  railway.toml  recoverlead-financials.html
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 24a2dc3803c7_add_deal_outcome_fields_to_user_leads.py  9d42cee63ff7_add_skip_trace_results_table.py  a1b2c3d4e5f6_fix_taylor_county_column_mapping.py  a1b2c3d4e5f6_sumter_column_mapping.py  a2b3c4d5e6f7_sumter_column_mapping.py  b2c3d4e5f6a7_fix_manatee_county_column_mapping.py  b2c3d4e5f6a7_letter_mailing_fields.py  b3c4d5e6f7a8_letter_mailing_fields.py  b3c4d5e6f7g8_fix_taylor_county_bad_leads.py  c11033abbf71_add_email_alert_preferences_to_users.py  c3d4e5f6a7b8_pipeline_metrics_view.py  c4d5e6f7g8h9_fix_sumter_bad_leads_from_old_mapping.py  d4e5f6a7b8c9_fix_broken_scrapers.py  d5e6f7g8h9i0_ca_health_fixes.py  d5f8a1b2c3e4_seed_florida_counties.py  e6a7b8c9d0f1_switch_pinellas_to_playwright.py  e6f7g8h9i0j1_activate_contra_costa.py  e7f9c2b3a4d5_activate_expanded_counties.py  f1e2d3c4b5a6_activate_playwright_counties.py  f7g8h9i0j1k2_activate_kern.py  f8a9b3c4d5e6_fix_county_urls.py  fb916193e1bc_initial_schema.py  g2f3e4d5c6b7_activate_collier_marion_polk.py  g8h9i0j1k2l3_activate_forsyth_ga.py  h3g4f5e6d7c8_add_county_contact_fields.py  h9i0j1k2l3m4_activate_cobb_ga.py  (+32 more)
backend/app/: config.py  dependencies.py  main.py
backend/scripts/: pre_ingest.py  seed_counties.py
backend/tests/: conftest.py
(+282 files in other folders)
